2010-08-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* exp_main_sub.c: add return to silence compiler warning.
	Updated EXP_VERSION to 5.45.0

	* config.guess, config.sub, expect.m4 (removed):
	* configure, configure.in, tclconfig/tcl.m4: Update to TEA 3.9
	* Makefile.in, aclocal.m4: Partial cleanup of the build system.
	* testsuite/Makefile.in:   Remove unused EXP_ from configure.in
	* testsuite/aclocal.m4:    and no longer use Tk.
	* testsuite/configure:     Update testsuite bits to use TEA info.
	* testsuite/configure.in:
	Update expect to version 5.45

	* Dbg.c: account for removal of tcldbgcf.h
	* DbgMkfl.in, Dbgconfig.in, Dbgconfigure, DbgpkgInd.in (removed):
	* tcldbgcf.h.in (removed): removed Dbg debugger subcomponent as it
	no longer built and debugger functionality is included in expect
	library and binary

	* pty_termios.c: add HAVE_STRING_H include string.h
	* exp_trap.c: add HAVE_STRING_H include string.h

	* expectk.man, exp_main_tk.c (removed): expectk no longer
	built. Use tclsh with package require Tk and Expect instead.

	* tests/all.tcl: add package require Expect

	* example/archie, example/autoexpect: minor code cleanup
	* example/tkpasswd, example/tknewsbiff, example/tkterm: use
	package require statements in lieu of expectk

2009-11-03  Andreas Kupries  <andreask@activestate.com>

	* exp_command.c (Exp_SpawnObjCmd): [Expect SF Bug 2891422]. Fixed
	  error message when the command to spawn could not be executed.
	  Tried to use a Tcl_Obj* as argument for a %s. Replaced with the
	  correct char* variable. Thanks to Elchonon Edelson
	  <eee@users.sourceforge.net> for the report.
	  [Expect SF Bug 2891563] Ditto for the same type of bug when
	  emitting error 'usage: -ignore unknown signal name'. The
	  remainder of the exp_error calls are ok however.

	* configure.in: Bumped version to 5.44.1.15.
	* configure: Regen'd, autoconf 2.59.

2009-07-14  Andreas Kupries  <andreask@activestate.com>

	* exp_clib.c (TclRegComp): Fixed memory leak reported by